style improvements, selecting

--- a/loupe-browser/index.html
+++ b/loupe-browser/index.html
@@ -7,16 +7,11 @@
 </head>
 
 <body>
-  <div class="debug-pane">
-    <div class="cog">x</div>
-    <div class="links hidden">
-      <a href="#" class="toggle-editor">toggle editor</a>
-      <a href="#" class="toggle-terminal">toggle terminal</a>
-    </div>
+  <div class="container">
+    <div id="loading">trying to connect...</div>
+    <textarea id="code" name="code">asdf</textarea>
+    <div id="terminal"></div>
   </div>
-  <div id="loading">trying to connect...</div>
-  <textarea id="code" name="code">asdf</textarea>
-  <div id="terminal"></div>
   <script src="./index.ts"></script>
 </body>
 
